# iroh-go

./: go.mod  makefile
examples/: main.go
examples/connect/: main.go
internal/ffi/: ffi.go  ffi_test.go
internal/iroherr/: errors.go
iroh/: builder.go  connection.go  connection_stats.go  connection_test.go  endpoint.go  endpoint_test.go  path.go  preset.go  results.go  stream.go  utils.go
iroh-rs/: Cargo.toml
iroh-rs/include/: error.h  iroh.h
iroh-rs/src/: accept.rs  connection.rs  endpoint.rs  errors.rs  key.rs  lib.rs  manager.rs  net.rs  path.rs  relay.rs  runtime.rs  ticket.rs  watch.rs
