[package]
name = "go_iroh"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
iroh = "0.98.2"
tokio = { version = "1", features = ["full"] }
safer-ffi = { version = "0.1", features = ["headers"] }
once_cell = "1"
iroh-tickets = "0.5.0"

[features]
headers = ["safer-ffi/headers"]
