[package]
name = "go_iroh"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1.80"
iroh = {version = "1.0.0" }
iroh-base = { version = "1.0.0", features = ["key"] }
tokio = { version = "1", features = ["full"] }
safer-ffi = { version = "0.1.13", features = ["headers","async-fn"] }
once_cell = "1"
iroh-tickets = { version = "1.0.0" }
anyhow = "1.0.102"
serde = "1.0.228"
n0-future = "0.3"
tracing-subscriber = "0.3.23"
tracing = "0.1.44"
iroh-relay = "1.0.0"

[features]
headers = ["safer-ffi/headers"]
